package com.directi.training.isp.exercise_refactored;

public interface Door
{
    void lock();

    void unlock();

    void open();

    void close();


}
