package com.directi.training.isp.exercise_refactored;

public interface ISensingDoor extends Door{

    void proximityCallback();
}
