package com.directi.training.isp.exercise_refactored;

public interface ITimedDoor extends Door{
    void timeOutCallback();
}
